# CCP

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: README.md  roadmap.md
docs/spec/: actions.md  capabilities.md  ccp-core.md  errors.md  extensions.md  http-binding.md  media.md  message-schemas.md  reliability.md  security.md
examples/: error.json  hello.json  hello_ack.json  python_client.py  session_end.json  session_ended.json  session_start.json  session_started.json  turn_audio_ref.json  turn_result.json  turn_text.json
examples/ccp_api/: README.md  main.py
examples/esp32_gateway_api/: README.md  main.py  requirements.txt
schemas/: hello-ack.json  session-ended.json  session-start.json  turn-result.json
src/ccp_sdk/: __init__.py  client.py  errors.py  messages.py  schemas.py
src/ccp_sdk/schemas/: ccp-message.json  error.json  hello.json  session-end.json  session-started.json  turn.json
