[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ccp-sdk"
version = "0.1.0"
description = "Reference Python SDK for Cortex Capsule Protocol (CCP)"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "CCP contributors" }
]
license = { file = "LICENSE" }
keywords = ["ccp", "protocol", "iot", "robotics", "gateway"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "httpx>=0.27",
  "jsonschema>=4.21",
]

[project.urls]
Homepage = "https://github.com/<your-org>/<your-repo>"
Repository = "https://github.com/<your-org>/<your-repo>"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ccp_sdk = ["py.typed", "schemas/*.json"]
